# iguape

./: .gitignore  README.md  _config.yml  about.md  pyproject.toml
.github/workflows/: sphinx.yml
Iguape/: Monitor.py  __init__.py  iguape.py  launcher.py
Iguape/GUI/: iguape_GUI.py  iguape_gui.ui  pk_window.py
_includes/: header.html
_site/: 404.html  feed.xml  index.html
_site/about/: index.html
_site/installation/: index.html
_site/tutorial/: index.html
docs/: .buildinfo  .buildinfo.bak  Iguape.GUI.html  Iguape.html  _config.yml  about.md  conf.py  genindex.html  index.html  index.rst  installation.html  modules.html  modules.rst  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
docs/_includes/: header.html
docs/_modules/: index.html
docs/_modules/Iguape/: Monitor.html  iguape.html  launcher.html
docs/_modules/Iguape/GUI/: iguape_GUI.html  pk_window.html
docs/_posts/: 2024-10-25-tutorial.markdown
docs/_site/: 404.html  feed.xml  index.html
docs/_site/installation/: index.html
docs/_site/tutorial/: index.html
docs/_sources/: Iguape.GUI.rst  index.rst.txt  installation.rst.txt
sphinx/: Iguape.rst  conf.py  index.rst  installation.rst  modules.rst
web-site-docs/: Gemfile
web-site-docs/_posts/: 2024-10-25-installation.markdown
web-site-docs/_site/about/: index.html
